--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -330,5 +330,5 @@
         </div>
     </div>
 </div>
-<app-bottom-navbar></app-bottom-navbar>
+<app-bottom-navbar [rental]="rental"></app-bottom-navbar>
 </section>
