--- a/src/app/rental/rental-list/rental-list.component.html
+++ b/src/app/rental/rental-list/rental-list.component.html
@@ -1,14 +1,16 @@
 <section id="rentalListing">
-  <div class="page-header page-header-xs" data-parallax="true" style="background-image: url('./assets/img/fabio-mangione.jpg');">
+  <div class="page-header page-header-small" data-parallax="true" style="background-image: url('./assets/img/top-banner.jpg');">
     <div class="filter"></div>
     <div class="container">
-        <div class="space-50"></div>
+        <div class="space-top"></div>
+        <div class="anytime-pt-logo-rentaldetails">
+            <img src="assets/img/anytime-pt-logo2.png" alt="">
+        </div>
         <div class="motto text-center">
-            <h1>Personal Trainers</h1>
-            <h3>Here are professionals of personal training.</h3>
-            <br />
+            <h2>Here are the professionals.</h2>
         </div>
     </div>
+    <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
   </div>
   <div class="main">
     <div class="section text-center">
@@ -22,4 +24,3 @@
     </div>
   </div>
 </section>
-  
