--- a/src/assets/sass/paper-kit.scss
+++ b/src/assets/sass/paper-kit.scss
@@ -32,7 +32,6 @@
 @import "paper-kit/navbars";
 @import "paper-kit/images";
 @import "paper-kit/cards";
-@import "paper-kit/footers";
 
 // Predefined description areas
 @import "paper-kit/info-areas";
@@ -42,6 +41,11 @@
 
 // Fancy Stuff
 @import "paper-kit/dropdown";
+
+// Predefined page areas
+@import "paper-kit/headers";
+@import "paper-kit/footers";
+
 //
 // icons
 @import "paper-kit/icons";
