--- a/src/assets/sass/paper-kit/_responsive.scss
+++ b/src/assets/sass/paper-kit/_responsive.scss
@@ -18,15 +18,16 @@
          @include transition (0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
          position: relative;
     }
-    .navbar .navbar-nav .dropdown-menu{
-        height: 400px;
-        overflow-y: scroll;
-    }
-    .navbar .navbar-collapse.collapse,
-    .navbar .navbar-collapse.collapse.in,
-    .navbar .navbar-collapse.collapsing{
-        // display: none !important;
-    }
+    // .navbar .navbar-nav .dropdown-menu{
+    //     height: 400px;
+    //     overflow-y: scroll;
+    // }
+    
+    // .navbar .navbar-collapse.collapse,
+    // .navbar .navbar-collapse.collapse.in,
+    // .navbar .navbar-collapse.collapsing{
+    //     display: none !important;
+    // }
     .demo-header .motto{
         padding-top: 30% !important;
     }
@@ -474,20 +475,20 @@
 
     .dropdown.show .dropdown-menu,
     .dropdown .dropdown-menu{
-        background-color: transparent;
+        // background-color: transparent;
         border: 0;
         transition: none;
         -webkit-box-shadow: none;
         box-shadow: none;
         width: auto;
-        border-radius: 0;
+        // border-radius: 0;
 
 
-        .dropdown-item:hover,
-        .dropdown-item:focus{
-            background-color: transparent;
-            border-radius:0;
-        }
+        // .dropdown-item:hover,
+        // .dropdown-item:focus{
+        //     background-color: transparent;
+        //     border-radius:0;
+        // }
 
         .dropdown-item a{
 
@@ -673,20 +674,20 @@
 
         .dropdown.show .dropdown-menu,
         .dropdown .dropdown-menu{
-            background-color: transparent;
+            // background-color: transparent;
             border: 0;
             transition: none;
             -webkit-box-shadow: none;
             box-shadow: none;
             width: auto;
-            border-radius: 0;
+            // border-radius: 0;
 
 
-            .dropdown-item:hover,
-            .dropdown-item:focus{
-                background-color: transparent;
-                border-radius:0;
-            }
+            // .dropdown-item:hover,
+            // .dropdown-item:focus{
+            //     background-color: transparent;
+            //     border-radius:0;
+            // }
 
             .dropdown-item a{
 
