--- a/src/app/auth/login/login-resetpassword/login-newpassword/login-newpassword.component.html
+++ b/src/app/auth/login/login-resetpassword/login-newpassword/login-newpassword.component.html
@@ -1,53 +1,61 @@
 <section id="login-newpassword">
-  <div class="bwm-form">
-    <div class="row">
-      <div class="col-md-5">
-        <h2>Set Your New Password</h2>
-        <form #registarForm="ngForm">
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input [(ngModel)]="formData.email"
-                   name="email"
-                   type="email"
-                   class="form-control"
-                   id="email"
-                   required>
+  <div class="wrapper">
+    <div class="page-header section-dark" style="background-image: url('./assets/img/top-banner.jpg');">
+      <div class="filter"></div>
+        <div class="container">
+          <div class="space-110"></div>
+          <div class="row">
+            <div class="col-lg-4 col-sm-6 mr-auto ml-auto">
+              <div class="card card-register">
+                <h3 class="title">Set new Password</h3>
+                <div *ngIf="errors.length > 0" class="alert alert-danger">
+                  <p *ngFor="let error of errors">{{error.detail}}</p>
+                </div>
+                <form class="register-form" #newpasswordForm="ngForm">
+                  <label>Email</label>
+                  <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text">
+                          <i class="nc-icon nc-email-85"></i>
+                      </span>
+                    </div>
+                    <input [(ngModel)]="formData.email"
+                            name="email"
+                            type="email"
+                            class="form-control"
+                            id="email"
+                            placeholder="Email" (focus)="focus=true" (blur)="focus=false"
+                            required>
+                  </div>
+                  <div class="form-group">
+                    <label>New Password</label>
+                    <input [(ngModel)]="formData.password"
+                            name="password"
+                            type="password"
+                            class="form-control"
+                            id="password"
+                            placeholder="Password" (focus)="focus1=true" (blur)="focus1=false"
+                            required>
+                  </div>
+                  <div class="form-group">
+                      <input [(ngModel)]="formData.passwordConfirmation"
+                              name="passwordConfirmation"
+                              type="password"
+                              class="form-control"
+                              id="passwordConfirmation"
+                              placeholder="Confirm Password" (focus)="focus2=true" (blur)="focus2=false"
+                              required>
+                  </div>
+                  <button [disabled]="!newpasswordForm.valid" type="submit" class="btn btn-danger btn-block btn-round" (click)="setNewPassword(verifyToken)">Set new Password</button>
+                </form>
+              </div>
+            </div>
           </div>
-
-          <div class="form-group">
-            <label for="password">Password</label>
-            <input [(ngModel)]="formData.password"
-                   name="password"
-                   type="password"
-                   class="form-control"
-                   id="password"
-                   required>
+          <div class="footer register-footer text-center">
+            <h6>&copy;{{test | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> Anytime Personal Trainer.inc</h6>
           </div>
-
-          <div class="form-group">
-            <label for="passwordConfirmation">Password(確認)</label>
-            <input [(ngModel)]="formData.passwordConfirmation"
-                   name="passwordConfirmation"
-                   type="password"
-                   class="form-control"
-                   id="passwordConfirmation"
-                   required>
-          </div>
-
-          <button [disabled]="!registarForm.form.valid" (click)="setNewPassword(verifyToken)" type="submit" class="btn btn-bwm">Submit</button>
-        </form>
-        <div *ngIf="errors.length > 0" class="alert alert-danger">
-          <p *ngFor="let error of errors">
-            {{error.detail}}
-          </p>
         </div>
       </div>
-      <div class="col-md-6 ml-auto">
-        <div class="image-container">
-          <h2 class="catchphrase">パスワードを再設定します。登録済Emailアドレスと新しいパスワードを設定してください</h2>
-          <img src="assets/images/register-image.jpg" alt="">
-        </div>
-      </div>
-    </div>
   </div>
+  
 </section>
