--- a/src/app/common/bottom-navbar/bottom-navbar.component.html
+++ b/src/app/common/bottom-navbar/bottom-navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand fixed-bottom" color-on-scroll="500">
     <div class="container justify-content-start">
-        <span class="nav-link">36000JPY / Hour</span>
+        <span class="nav-link">{{ rental.hourlyPrice }} JPY/Hour</span>
         <a class="btn btn-danger btn-fill" [routerLink]="['booking']" >Go To Booking</a>
     </div>
 </nav>
