--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,16 +17,15 @@
                     </div>
                     -->
                 </div>
-
                 <h2 class="presentation-subtitle text-center">選ばれし者の為の会員制パーソナルトレーニング</h2>
             </div>
         </div>
         <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
-
         <h6 class="category-absolute ml-auto mr-auto">
             &copy;{{test | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> Anytime Personal Trainer.inc
         </h6>
     </div>
+    
     <div class="main">
         <div class="section section-dark section-summary">
             <div class="container">
@@ -92,11 +91,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
-                        <h2 class="title">Nucleo Icons</h2><br/>
+                        <h2 class="title">Professional Trainers</h2><br/>
                         <p class="description">
                             Now UI Kit comes with 100 custom icons made by our friends from NucleoApp. The official package contains over 2.100 thin icons which are looking great in combination with Now UI Kit Make sure you check all of them and use those that you like the most.
                         </p><br/>
-                        <a [routerLink]="['/nucleoicons']" class="btn btn-danger btn-round">View Demo Icons</a>
+                        <a [routerLink]="['/rentals']" class="btn btn-danger btn-round">Go and see Professional Trainers !</a>
                     </div>
 
                     <div class="col-lg-6 col-md-12">
@@ -157,7 +156,7 @@
                                 <p *ngFor="let error of errors">{{error.detail}}</p>
                             </div>
                             <form class="register-form" #registarForm="ngForm">
-                                <label>Email</label>
+                                <!-- <label>Email</label> -->
                                 <div class="form-group">
                                     <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
                                         <div class="input-group-prepend">
@@ -175,7 +174,7 @@
                                         </div>
                                 </div>
 
-                                <label>Password</label>
+                                <!-- <label>Password</label> -->
                                 <div class="form-group">
                                     <input [(ngModel)]="formData.password"
                                             name="password"
