--- a/src/app/rental/rental-list/rental-list.component.scss
+++ b/src/app/rental/rental-list/rental-list.component.scss
@@ -1,3 +1,15 @@
+.anytime-pt-logo-rentaldetails{
+  z-index: 3;
+  position: relative;
+  max-width: 500px;
+  margin: -40px auto -50px;
+  padding: 50px;
+
+  img{
+      width: 100%;
+  }
+}
+
 #rentalListing {
     .title {
       font-size: 30px;
