--- a/src/app/rental/rental-list/rental-list-item/rental-list-item.component.html
+++ b/src/app/rental/rental-list/rental-list-item/rental-list-item.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="card-body">
       <label class="label label-warning">{{ rental.province }}</label>
-      <h5 class="card-title">{{ rental.rentalname }}</h5>
+      <h5 class="card-title">{{ rental.rentalname }} Trainer</h5>
       <div class="card-description">{{rental.description}}</div>
       <hr />
       <div class="card-footer">
