--- a/src/assets/sass/paper-kit.scss
+++ b/src/assets/sass/paper-kit.scss
@@ -46,6 +46,9 @@
 @import "paper-kit/headers";
 @import "paper-kit/footers";
 
+// FileUpload
+@import "paper-kit/fileupload.scss";
+
 //
 // icons
 @import "paper-kit/icons";
