--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -12,12 +12,12 @@
                     <a href="#pablo" class="btn btn-neutral btn-facebook btn-just-icon">
                       <i class="fa fa-facebook-square"></i>
                     </a>
-                    <a href="#pablo" class="btn btn-neutral btn-google btn-just-icon">
+                    <!-- <a href="#pablo" class="btn btn-neutral btn-google btn-just-icon">
                       <i class="fa fa-google-plus"></i>
                     </a>
                     <a href="#pablo" class="btn btn-neutral btn-twitter btn-just-icon">
                       <i class="fa fa-twitter"></i>
-                    </a>
+                    </a> -->
                   </div>
     
                   <div class="division">
@@ -30,32 +30,35 @@
                     <p *ngFor="let error of errors">{{error.detail}}</p>
                   </div>
                   <form class="register-form" [formGroup]="loginForm" (ngSubmit)="login()">
-                    <label>Email</label>
-                    <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
-                      <div class="input-group-prepend">
-                        <span class="input-group-text">
-                            <i class="nc-icon nc-email-85"></i>
-                        </span>
+                    <!-- <label>Email</label> -->
+                    <div class="form-group">
+                      <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
+                        <div class="input-group-prepend">
+                          <span class="input-group-text">
+                              <i class="nc-icon nc-email-85"></i>
+                          </span>
+                        </div>
+                        <input type="email"
+                                class="form-control"
+                                id="email"
+                                formControlName="email"
+                                placeholder="Email" (focus)="focus=true" (blur)="focus=false">
                       </div>
-                      <input type="email"
-                              class="form-control"
-                              id="email"
-                              formControlName="email"
-                              placeholder="Email" (focus)="focus=true" (blur)="focus=false">
                     </div>
-    
-                    <label>Password</label>
-                    <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus1===true}">
-                      <div class="input-group-prepend">
-                        <span class="input-group-text">
-                            <i class="nc-icon nc-key-25"></i>
-                        </span>
+                    <!-- <label>Password</label> -->
+                    <div class="form-group">
+                      <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus1===true}">
+                        <div class="input-group-prepend">
+                          <span class="input-group-text">
+                              <i class="nc-icon nc-key-25"></i>
+                          </span>
+                        </div>
+                        <input type="password"
+                                class="form-control"
+                                id="password"
+                                formControlName="password"
+                                placeholder="Password" (focus)="focus1=true" (blur)="focus1=false">
                       </div>
-                      <input type="password"
-                              class="form-control"
-                              id="password"
-                              formControlName="password"
-                              placeholder="Password" (focus)="focus1=true" (blur)="focus1=false">
                     </div>
                     <button [disabled]="!loginForm.valid" type="submit" class="btn btn-danger btn-block btn-round">Login</button>
                   </form>
