--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,6 +1,6 @@
 <section id="register">
     <div class="wrapper">
-        <div class="page-header" style="background-image: url('./assets/img/top-banner.jpg');">
+        <div class="page-header" style="background-image: url('./assets/img/register-bg.jpg');">
             <div class="filter"></div>
                 <div class="container">
                     <div class="space-110"></div>
@@ -41,12 +41,12 @@
                                     <a href="#pablo" class="btn btn-neutral btn-facebook btn-just-icon">
                                         <i class="fa fa-facebook-square"></i>
                                     </a>
-                                    <a href="#pablo" class="btn btn-neutral btn-google btn-just-icon">
+                                    <!-- <a href="#pablo" class="btn btn-neutral btn-google btn-just-icon">
                                         <i class="fa fa-google-plus"></i>
                                     </a>
                                     <a href="#pablo" class="btn btn-neutral btn-twitter btn-just-icon">
                                         <i class="fa fa-twitter"></i>
-                                    </a>
+                                    </a> -->
                                 </div>
                                 <div class="division">
                                     <div class="line l"></div>
