--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,17 +1,142 @@
-<footer class="footer">
-    <div class="container">
-        <div class="row">
-            <nav class="footer-nav">
-                <ul>
-                    <li><a routerLink="/register">Become Personal Trainer?</a></li>
-                </ul>
-            </nav>
-            <div class="credits ml-auto">
-                <span class="copyright">
-                    © {{test | date: 'yyyy'}}, MADE WITH <i class="fa fa-heart heart"></i>
-                    <a href="http://www.offshore-gogo.com" target="_blank" class="description">Anytime Peasonal Trainer.inc</a>
-                </span>
+<footer class="footer footer-big">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-sm-6 col-12 ml-auto mr-auto">
+                    <div class="logo-footer">
+                        <img src="assets/img/anytime-pt-logo2b.png" alt="">
+                    </div>
+                     <!-- <div class="form-group">
+                        <angular2-multiselect [data]="dropdownList" [(ngModel)]="selectedItems"
+                            [settings]="dropdownSettings"
+                            (onSelect)="onItemSelect($event)"
+                            (onDeSelect)="OnItemDeSelect($event)"
+                            (onSelectAll)="onSelectAll($event)"
+                            (onDeSelectAll)="onDeSelectAll($event)">
+                        </angular2-multiselect>
+                    </div>
+                     <div class="form-group">
+                         <angular2-multiselect [data]="dropdownList1" [(ngModel)]="selectedItems1"
+                             [settings]="dropdownSettings1"
+                             (onSelect)="onItemSelect($event)"
+                             (onDeSelect)="OnItemDeSelect($event)"
+                             (onSelectAll)="onSelectAll($event)"
+                             (onDeSelectAll)="onDeSelectAll($event)">
+                         </angular2-multiselect>
+                    </div> -->
+                </div>
+                <div class="col-md-9 ml-auto mr-auto col-sm-9 col-12">
+                    <div class="row">
+                        <div class="col-md-3 col-sm-3 col-6">
+                            <div class="links">
+                                <ul class="uppercase-links stacked-links">
+                                    <li>
+                                        <a href="#paper-kit" >
+                                            Home
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#paper-kit">
+                                            Discover
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#paper-kit">
+                                            Blog
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-3 col-6">
+                            <div class="links">
+                                <ul class="uppercase-links stacked-links">
+                                    <li>
+                                        <a href="#paper-kit">
+                                           Contact Us
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a routerLink="/register">
+                                           Become Trainer
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#paper-kit">
+                                           About Us
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- <div class="col-md-3 col-sm-3 col-6">
+                            <div class="links">
+                                <ul class="uppercase-links stacked-links">
+                                    <li>
+                                        <a href="#paper-kit">
+                                            Portfolio
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#paper-kit">
+                                           How it works
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#paper-kit">
+                                           Testimonials
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div> -->
+                        <!-- <div class="col-md-3 col-6">
+                            <div class="social-area">
+                                <a class="btn btn-just-icon btn-round btn-facebook">
+                                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                                </a>
+                                <a class="btn btn-just-icon btn-round btn-twitter">
+                                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                                </a>
+                                <a class="btn btn-just-icon btn-round btn-google">
+                                    <i class="fa fa-google-plus" aria-hidden="true"></i>
+                                </a>
+                                <a class="btn btn-just-icon btn-round btn-pinterest">
+                                    <i class="fa fa-pinterest-p" aria-hidden="true"></i>
+                                </a>
+                            </div>
+                        </div> -->
+                    </div>
+                    <hr />
+                    <div class="copyright">
+                        <div class="pull-left">
+                            © Anytime Personal Trainer.Inc
+                        </div>
+                        <div class="links pull-right">
+                            <ul>
+                                <li>
+                                    <a href="#paper-kit">
+                                        Company Policy
+                                    </a>
+                                </li>
+                                |
+                                <li>
+                                    <a href="#paper-kit">
+                                        Terms
+                                    </a>
+                                </li>
+                                |
+                                <li>
+                                    <a href="#paper-kit">
+                                        Privacy
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
+    
         </div>
-    </div>
-</footer>
+    </footer>
+    
