--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -140,12 +140,12 @@
                                 <a href="#pablo" class="btn btn-neutral btn-facebook btn-just-icon">
                                     <i class="fa fa-facebook-square"></i>
                                 </a>
-                                <a href="#pablo" class="btn btn-neutral btn-google btn-just-icon">
+                                <!-- <a href="#pablo" class="btn btn-neutral btn-google btn-just-icon">
                                     <i class="fa fa-google-plus"></i>
                                 </a>
                                 <a href="#pablo" class="btn btn-neutral btn-twitter btn-just-icon">
                                     <i class="fa fa-twitter"></i>
-                                </a>
+                                </a> -->
                             </div>
                             <div class="division">
                                 <div class="line l"></div>
