--- a/src/app/rental/rental-detail/rental-detail.component.scss
+++ b/src/app/rental/rental-detail/rental-detail.component.scss
@@ -1,3 +1,14 @@
+.card{
+    &[data-background="image"]{
+        &:hover::after{
+            background-color: transparent;
+            transition-duration: .2s;
+        }
+    }
+}
+
+
+
 .video-responsive{
     overflow:hidden;
     padding-bottom:66.66%; 
