--- a/src/assets/css/demo.css
+++ b/src/assets/css/demo.css
@@ -1277,8 +1277,8 @@ pre.prettyprint {
     z-index: 2;
 }
 
-.profile-content {
+/* .profile-content {
     padding-top: 0!important;
     position: relative;
     z-index: 2;
-}
+} */
