--- a/src/assets/sass/paper-kit/_images.scss
+++ b/src/assets/sass/paper-kit/_images.scss
@@ -51,6 +51,14 @@
 }
 .profile-picture{
     margin: 0 auto;
+    .fileinput img{
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        margin-bottom: 10px;
+        max-width: 150px;
+        max-height: 150px;
+    }
     .fileinput-new img{
         width: 150px;
         height: 150px;
